welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:8: error: not found: value dessineFleur
  dessineFleur()
  ^FlowerPot:30: error: not found: value dessineFleur
  dessineFleur()
  ^FlowerPot:35: error: not found: value setCouleurBrosses
  setCouleurBrosses(Color.cyan)
  ^FlowerPot:36: error: not found: value dessineFleur
  dessineFleur()
  ^FlowerPot:46: error: not found: value dessineFleur
  dessineFleur()
  ^FlowerPot:52: error: not found: value dessineFleur
  dessineFleur()
  ^